# control-inteligente

./: README.md
control_fuzzy/documents/: 01_introduccion_docker.md  03_estructura_paquetes.md  05_teoria_dibujo_obstaculos.md  06_introduccion_control_difuso.md
control_fuzzy/ros2_ws/: Dockerfile
control_fuzzy/ros2_ws/ros2_ws/src/turtle_fuzzy_control/: package.xml  setup.py
control_fuzzy/ros2_ws/ros2_ws/src/turtle_fuzzy_obstacles/: setup.cfg  setup.py
control_redes_neuronales/: .gitignore  README.md
control_redes_neuronales/documents/: 01_introduccion_docker.md  02_introduccion_ros2.md  03_estructura_paquetes.md  04_introduccion_turtlebot.md  05_teoria_dibujo_obstaculos.md  06_introduccion_redes_neuronales.md  07_entrenamiento_modelo.md  08_implementacion_control_neural.md  09_guia_entrenamiento_iterativo.md
control_redes_neuronales/ros2_ws/: Dockerfile  build_docker.sh  run_docker.sh
control_redes_neuronales/ros2_ws/ros2_ws/src/turtle_nn_control/: package.xml  quick_train_and_deploy.sh  rebuild_and_setup.sh  setup.cfg  setup.py
control_redes_neuronales/ros2_ws/ros2_ws/src/turtle_nn_control/turtle_nn_control/: train_nn_model.py  train_nn_model_improved.py  turtle_nn_controller.py
documents/: 02_introduccion_ros2.md  04_introduccion_turtlebot.md  07_calculo_manual_parametros.md  08_implementacion_control_difuso.md
ros2_ws/: build_docker.sh  run_docker.sh
ros2_ws/ros2_ws/src/turtle_fuzzy_control/: setup.cfg
ros2_ws/ros2_ws/src/turtle_fuzzy_obstacles/: package.xml
(+2 files in other folders)
