<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_nn_control</name>
  <version>1.0.0</version>
  <description>Control basado en redes neuronales para TurtleSim usando PyTorch para navegación inteligente</description>
  <maintainer email="ric-185@hotmail.com">Hanssel Neira</maintainer>
  <license>MIT</license>

  <!-- Dependencias de ejecución -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <!-- Dependencias de testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Tipo de build -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

